src/tests/testfiles/variable-declarations/5.txt
testfiles/variable-declarations/5.c:3:7: error: incompatible types when initializing type 'int *' using type 'int'
int *b = a;
    ^
testfiles/variable-declarations/5.c:4:8: error: incompatible types when initializing type 'char *' using type 'int'
char *c = a;
     ^
